--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,11 +25,6 @@ steps:
     publishWebProjects: false
     arguments: --configuration $(buildConfiguration) 
 
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'build'
-    projects: '$(solution)'
-
 # - task: VSTest@2
 #   inputs:
 #     platform: '$(buildPlatform)'
@@ -38,6 +33,8 @@ steps:
   inputs:
     command: 'publish'
     publishWebProjects: true
+    projects: $(projects)
+    arguments: "--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)"
 
 - task: AzureRmWebAppDeployment@4
   inputs:
