Add basic add/get/getall requests for users and runs

--- a/PortStanleyRun.Api/appsettings.json
+++ b/PortStanleyRun.Api/appsettings.json
@@ -8,10 +8,10 @@
   "AllowedHosts": "*",
   "Cosmos": {
     "DatabaseId": "portstanleyrun-api-database",
-    "ContainerId": "Users"
+    "UsersContainer": "Users",
+    "RunsContainer": "Runs"
   },
   "ConnectionStrings": {
-    "MongoDb": "mongodb://portstanleyrun-api-server:{0}@portstanleyrun-api-server.mongo.cosmos.azure.com:10255/?ssl=true&replicaSet=globaldb&retrywrites=false&maxIdleTimeMS=120000&appName=@portstanleyrun-api-server@",
-    "Primary": "AccountEndpoint=https://psr-db.documents.azure.com:443/;AccountKey={0}"
+    "MongoDb": "mongodb://portstanleyrun-api-server:{0}@portstanleyrun-api-server.mongo.cosmos.azure.com:10255/?ssl=true&replicaSet=globaldb&retrywrites=false&maxIdleTimeMS=120000&appName=@portstanleyrun-api-server@"
   }
 }
