Add Auth0 and basic permissions for Runs and Users

--- a/PortStanleyRun.Api/appsettings.json
+++ b/PortStanleyRun.Api/appsettings.json
@@ -13,5 +13,10 @@
   },
   "ConnectionStrings": {
     "MongoDb": "mongodb://portstanleyrun-api-server:{0}@portstanleyrun-api-server.mongo.cosmos.azure.com:10255/?ssl=true&replicaSet=globaldb&retrywrites=false&maxIdleTimeMS=120000&appName=@portstanleyrun-api-server@"
+  },
+  "Auth0": {
+    "Domain": "https://portstanleyrun-dev.us.auth0.com/",
+    "Audience": "https://internal.portstanleyrun.ca",
+    "ClientId": "QVZTdUBOuyVl8tkkEksBVS4GsPCfGcoi"
   }
 }
