Update pr-pipeline.yml for Azure Pipelines

--- a/pr-pipeline.yml
+++ b/pr-pipeline.yml
@@ -27,4 +27,9 @@ steps:
     command: build
     projects: $(projects)
     publishWebProjects: false
-    arguments: --configuration $(buildConfiguration) 
+    arguments: --configuration $(buildConfiguration)
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'test'
+    projects: '**/*.UnitTests.csproj'
