Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,5 +61,8 @@ stages:
           azureSubscription: 'Free Trial(949d7eee-adc3-4aaa-bedf-54d3174d11ec)'
           appType: 'webAppLinux'
           WebAppName: 'PortStanleyRun-Api-Dev'
+          deployToSlotOrASE: true
+          ResourceGroupName: 'rg-dev'
+          SlotName: 'production'
           packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
           RuntimeStack: 'DOTNETCORE|6.0'
