Add dev connection string and update tests

--- a/PortStanleyRun.Api/appsettings.json
+++ b/PortStanleyRun.Api/appsettings.json
@@ -12,7 +12,7 @@
     "RunsContainer": "Runs"
   },
   "ConnectionStrings": {
-    "MongoDb": "mongodb://portstanleyrun-api-server:{0}@portstanleyrun-api-server.mongo.cosmos.azure.com:10255/?ssl=true&replicaSet=globaldb&retrywrites=false&maxIdleTimeMS=120000&appName=@portstanleyrun-api-server@"
+    "MongoDb": "mongodb://portstanleyrun-api-dev-server:{0}@portstanleyrun-api-dev-server.mongo.cosmos.azure.com:10255/?ssl=true&retrywrites=false&replicaSet=globaldb&maxIdleTimeMS=120000&appName=@portstanleyrun-api-dev-server@"
   },
   "Auth0": {
     "Domain": "https://portstanleyrun-dev.us.auth0.com/",
