Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,6 +87,8 @@ stages:
           RunAsPreJob: false
       - task: DotNetCoreCLI@2
         displayName: "Integration Tests"
+        env:
+          api-clientsecret: $(api-clientsecret)
         inputs:
           command: 'test'
           projects: '**/*.IntegrationTests.csproj'
