Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,6 +85,11 @@ stages:
           KeyVaultName: 'kv-portstanley-d'
           SecretsFilter: '*'
           RunAsPreJob: false
+      - task: FileTransform@1
+        inputs:
+          folderPath: '$(System.DefaultWorkingDirectory)/**/*.zip'
+          fileType: 'json'
+          targetFiles: '**/appsettings.test.json'
       - task: DotNetCoreCLI@2
         displayName: "Integration Tests"
         env:
