--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,7 +84,7 @@ stages:
           RuntimeStack: 'DOTNETCORE|6.0'
       - task: FileTransform@1
         inputs:
-          folderPath: '$(System.DefaultWorkingDirectory)/**/*'
+          folderPath: '$(System.DefaultWorkingDirectory)/**/PortStanleyRun.Api.IntegrationTests/*'
           fileType: 'json'
           targetFiles: '**/appsettings.test.json'
       - task: DotNetCoreCLI@2
