--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,13 +84,11 @@ stages:
           RuntimeStack: 'DOTNETCORE|6.0'
       - task: FileTransform@1
         inputs:
-          folderPath: '$(System.DefaultWorkingDirectory)/**/PortStanleyRun.Api.IntegrationTests/*'
+          folderPath: '$(System.DefaultWorkingDirectory)/**/PortStanleyRun.Api.IntegrationTests'
           fileType: 'json'
           targetFiles: '**/appsettings.test.json'
       - task: DotNetCoreCLI@2
         displayName: "Integration Tests"
-        env:
-          api-clientsecret: $(api-clientsecret)
         inputs:
           command: 'test'
           projects: '**/*.IntegrationTests.csproj'
