Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,6 +63,7 @@ stages:
     condition: succeeded()
     variables:
       - group: "kv-development"
+      - group: "development"
     jobs:
     - job:
       steps:
