--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -93,6 +93,7 @@ stages:
         inputs:
           command: 'test'
           projects: '**/*.IntegrationTests.csproj'
+          arguments: --configuration $(buildConfiguration)
 
   - stage: DeployProd
     displayName: "Deploy to Prod"
